<resources>
    <string name="app_name">DoctoEasy</string>
    <string name="button_login">LOG IN</string>
    <string name="button_sign_up">SIGN UP</string>
    <string name="email_addres">EMAIL ADDRES</string>
    <string name="password">PASSWORD</string>
    <string name="login_edit_text_password">Password</string>
    <string name="login_edit_text_email">E-mail</string>
    <string name="text_signup">Sign up</string>
    <string name="text_login">Log in</string>
    <string name="bottom_menu_search">Search</string>
    <string name="tv_bottom_menu_appointment">Appointment</string>
    <string name="image_view_bottom_menu_inbox">Inbox</string>
    <string name="text_view_bottom_menu_myaccaunt">Login</string>
    <string name="text_view_forgot_password">Forgot password?</string>

    <string name="muliextrabold">muliextrabold.ttf</string>
    <string name="text_view_sign_up">Sign up</string>
    <string name="text_view_login">Log in</string>
    <string name="page_name_patient">Patient</string>
    <string name="text_view_i_want_news_latter_subscription">I want news latter subscription</string>
    <string name="text_view_i_accept_the_rulles_and_conditions">I accept the rulles and conditions</string>
    <string name="text_view_first_name">FIRST NAME</string>
    <string name="text_view_last_name">LAST NAME</string>
    <string name="text_view_gender">GENDER</string>
    <string name="text_view_date_of_birth">DATE OF BIRTH</string>
    <string name="text_view_phone_number">PHONE NUMBER</string>
    <string name="text_view_password">PASSWORD</string>
    <string name="text_view_confirm_password">CONFIRM PASSWORD</string>
    <string name="text_view_email">EMAIL</string>
</resources>

