<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpSpecialistActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/LinearLayoutCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewBackArrow"
                    android:layout_width="40dp"
                    android:layout_height="55dp"
                    android:onClick="backArrowClick"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/include"
                    app:layout_constraintHorizontal_bias="0.043"
                    app:layout_constraintStart_toStartOf="@+id/include"
                    app:layout_constraintTop_toTopOf="@+id/include"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/arrow_back" />

                <include
                    android:id="@+id/include"
                    layout="@layout/top_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/textViewFirstName"
                style="@style/styles_TextViewPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_view_first_name" />



            <EditText
                android:id="@+id/editTextFirstName"
                style="@style/styles_EditTextPatient"
                />

            <TextView
                android:id="@+id/textViewLastName"
                style="@style/styles_TextViewPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_view_last_name" />

            <EditText
                android:id="@+id/editTextLastName"
                style="@style/styles_EditTextPatient"
                android:ems="10" />

            <TextView
                android:id="@+id/textViewGender"
                style="@style/styles_TextViewPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_view_gender" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli_extrabold"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:fontFamily="@font/muli_extrabold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:text="Female"
                        android:textColor="#3f535f" />

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:fontFamily="@font/muli_extrabold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="Male"
                        android:textColor="#3f535f" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewDateOfBirth"
                style="@style/styles_TextViewPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_view_date_of_birth" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"

                android:onClick="dataBirthOnClick">

                <EditText
                    android:id="@+id/editTextDateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@null"
                    android:focusable="false"

                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/bg_imageViewDateOfBirth"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/bg_imageViewDateOfBirth"
                    android:onClick="dataBirthOnClick"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/bg_imageViewDateOfBirth"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/tv_login_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/arrow_imageViewDateOfBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/bg_imageViewDateOfBirth"
                    app:layout_constraintEnd_toEndOf="@+id/bg_imageViewDateOfBirth"
                    app:layout_constraintHorizontal_bias="0.91"
                    app:layout_constraintStart_toStartOf="@+id/bg_imageViewDateOfBirth"
                    app:layout_constraintTop_toTopOf="@+id/bg_imageViewDateOfBirth"
                    app:layout_constraintVertical_bias="0.516"
                    app:srcCompat="@drawable/arrow_for_spinner" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewPhoneNumber"
                style="@style/styles_TextViewPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/text_view_phone_number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="19">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/editText9"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="3"
                    android:background="@drawable/tv_login_bg"
                    android:paddingLeft="10dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/editText10"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="3"
                    android:background="@drawable/tv_login_bg"
                    android:paddingLeft="10dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textAlignment="gravity" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/editText11"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="9"
                    android:background="@drawable/tv_login_bg"
                    android:paddingLeft="10dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView14"
                style="@style/styles_TextViewPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/styles_EditTextPatient"
                />

            <TextView
                android:id="@+id/textViewPassword"
                style="@style/styles_TextViewPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_password" />

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/styles_EditTextPatient"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:paddingLeft="10dp"
                android:password="true" />

            <TextView
                android:id="@+id/textViewConfirmPassw"
                style="@style/styles_TextViewPatient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_confirm_password" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                style="@style/styles_EditTextPatient"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:paddingLeft="10dp"
                android:password="true" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/imageViewLatterSubscription"
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:contextClickable="true"
                    android:onClick="newsLatterSubscriptionOnClick"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textViewLatter"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/cb_bg_remember_me" />

                <ImageView
                    android:id="@+id/imageViewOrangeCube1"
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:clickable="true"
                    android:onClick="newsLatterSubscriptionOnClick"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewLatterSubscription"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewLatterSubscription"
                    app:layout_constraintStart_toStartOf="@+id/imageViewLatterSubscription"
                    app:layout_constraintTop_toTopOf="@+id/imageViewLatterSubscription"
                    app:srcCompat="@drawable/cb_orange" />

                <TextView
                    android:id="@+id/textViewLatter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/text_view_i_want_news_latter_subscription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/imageViewRullesAndConditions"
                    android:layout_width="30dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:contextClickable="true"
                    android:gravity="left"
                    android:onClick="acceptRullesAndConditionsOnClick"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textViewRulls"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/cb_bg_remember_me" />

                <ImageView
                    android:id="@+id/imageViewOrangeCube2"
                    android:layout_width="11dp"
                    android:layout_height="11dp"
                    android:clickable="true"
                    android:onClick="acceptRullesAndConditionsOnClick"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/imageViewRullesAndConditions"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewRullesAndConditions"
                    app:layout_constraintStart_toStartOf="@+id/imageViewRullesAndConditions"
                    app:layout_constraintTop_toTopOf="@+id/imageViewRullesAndConditions"
                    app:srcCompat="@drawable/cb_orange" />


                <TextView
                    android:id="@+id/textViewRulls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/text_view_i_accept_the_rulles_and_conditions"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:onClick="signUpOnClick"
                android:layout_width="204dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/btn_signup" />

        </LinearLayout>
    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutBottomMenu"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <include
        android:id="@+id/include2"
        layout="@layout/bottom_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>